<resources>
    <string name="app_name">Chat</string>
    <string name="salary_title">工资</string>
    <string name="chat_up_finger">向上滑动取消发送</string>
    <string name="net_work_error">网络异常</string>
    <string name="once_card_single">品质服务，畅快享受</string>
    <string name="once_card_mix">特惠套餐，超越期待</string>
    <string name="once_card_credit">会员积分超值兑换～</string>
    <string name="time_limit_marketing">春宵一刻值千金</string>
    <string name="one_yuan_marketing">我和你只有一块钱的距离</string>
    <string name="luck_wheel_marketing">那一世转山转水，只为相见</string>
    <string name="invitation_marketing">邀请好友赢豪礼～</string>
    <string name="club_journal_message">有美女、有福利，你就是我的VIP</string>
    <string name="has_revoke_message">撤回一条消息</string>
    <string name="invite_gift_message">邀请好友赢好礼～</string>
    <string name="location_message">[位置]</string>
    <string name="image_message">[图片]</string>
    <string name="voice_message">[语音]</string>
    <string name="coupon_tip_message">领取了您的优惠券</string>
    <string name="paid_coupon_tip_message">购买了您的点钟券</string>
    <string name="order_message">[订单]</string>
    <string name="order_request_message">选项目、约技师，\n线上预约，方便快捷~</string>
    <string name="request_reward_message">万水千山总是情\n打赏两个行不行</string>
    <string name="request_paid_coupon">求点钟</string>
    <string name="credit_gift_message">[积分礼品]</string>
    <string name="get_gift">收到礼物:</string>
    <string name="get">，获得</string>
    <string name="gift_credit">积分</string>
    <string name="user_choice">到店选择</string>
    <string name="release_time">发布时间：</string>
    <string name="credit_available">当前积分余额：</string>
    <string name="loading">正在加载数据</string>
    <string name="loading_finish">已加载全部数据</string>
    <string name="add">添加</string>
    <string name="drag_sort">拖拽可调整快捷回复顺序</string>
    <string name="search">搜索</string>
    <string name="save">保存</string>
    <string name="hint_text">输入需要添加的快捷回复短语</string>
    <string name="down_and_say">按住说话</string>
    <string name="hint_input_text">在此输入...</string>
    <string name="send_text">发送</string>
    <string name="edit_fast_reply">编辑快捷回复</string>
    <string name="start_appointment">发起预约</string>
    <string name="cancel_order">取消</string>
    <string name="arrive_time">到店时间:</string>
    <string name="pending">待定</string>
    <string name="reservation_item">预约项目:</string>
    <string name="appointment_technician">预约技师:</string>
    <string name="reservation_amount">预约金额:</string>
    <string name="refuse_order">拒绝</string>
    <string name="perfect_order">完善订单</string>
    <string name="modify_order">修改</string>
    <string name="generating_order">生成订单</string>
    <string name="accept_order">接受</string>
    <string name="in_process">处理中...</string>
    <string name="time_limit">限时用</string>
    <string name="set_meal">套餐：</string>
</resources>
