<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="com.xmd.chat.message.ChatMessage" />

        <variable
            name="data"
            type="com.xmd.chat.viewmodel.ChatRowViewModelAppointment" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_r4_solid_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/start_appointment"
                android:textColor="#212121"
                android:textSize="@dimen/fontTitle"
                app:order_title="@{data.orderChatMessage}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/shape_r4_stoke_gray"
                android:onClick="@{()->data.onClickCancelOrder()}"
                android:paddingBottom="4dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="4dp"
                android:text="@string/cancel_order"
                android:visibility="@{data.operateCancel?View.VISIBLE:View.GONE}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arrive_time"
                    android:textColor="#616161" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/pending"
                    android:textColor="#212121"
                    android:textSize="@dimen/fontCaption"
                    app:order_service_time="@{data.orderChatMessage}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:visibility="@{data.serviceVisible?View.VISIBLE:View.GONE}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reservation_item"
                    android:textColor="#616161" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text='@{data.orderChatMessage.orderServiceName?? @string/user_choice}'
                    android:textColor="#212121"
                    android:textSize="@dimen/fontCaption" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:visibility="@{data.techVisible?View.VISIBLE:View.GONE}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appointment_technician"
                    android:textColor="#616161" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text='@{data.orderChatMessage.orderTechName??@string/user_choice}'
                    android:textColor="#212121"
                    android:textSize="@dimen/fontCaption" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:visibility="@{data.orderChatMessage.orderPayMoney!=null?View.VISIBLE:View.GONE}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reservation_amount"
                    android:textColor="#616161" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:textColor="#ff6666"
                    android:textSize="@dimen/fontCaption"
                    app:order_pay_money='@{data.orderChatMessage}' />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dddddd"
            android:visibility="@{data.showOperateSplitLine?View.VISIBLE:View.GONE}" />

        <!-- 接受或拒绝 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:visibility="@{data.operateRefuseAndAccept?View.VISIBLE:View.GONE}">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="@{()->data.onClickRefuseOrder()}"
                android:padding="8dp"
                android:text="@string/refuse_order"
                android:textColor="#212121" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#dddddd" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="@{()->data.onClickCreateOrder()}"
                android:padding="8dp"
                android:text="@string/perfect_order"
                android:textColor="#ff6666" />
        </LinearLayout>

        <!-- 修改和确定 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:visibility="@{data.operateChangeAndConfirm?View.VISIBLE:View.GONE}">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="@{()->data.onClickChangeOrder()}"
                android:padding="8dp"
                android:text="@string/modify_order"
                android:textColor="#212121" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#dddddd" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:visibility="@{data.inProgress?View.VISIBLE:View.GONE}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="@{()->data.onClickSubmitOrder()}"
                    android:padding="8dp"
                    android:text="@string/generating_order"
                    android:textColor="#ff6666" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableLeft="@drawable/ic_ok"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@{data.status}"
            android:visibility="@{data.status==null?View.GONE:View.VISIBLE}" />
    </LinearLayout>
</layout>
